CompactTabs.css
/**
* @name RefreshButtons
* @version 1.0
* @description Inspired on the scrapped Visual Refresh sidebar layout
* @author krammeth
* @website https://github.com/Krammeth
*/

@container style(--dms-tabs:true) {
  .scroller__99e7c[data-list-id^="private-channels-uid_"] {
    scrollbar-width: 0;
    scrollbar-color: transparent;

    >.content_d125d2 {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      align-content: flex-start;
      justify-content: space-evenly;

      >div:not([class]):first-child,
      >div[role="button"],
      >.privateChannelsHeaderContainer__99e7c,
      >.channel__972a0.dm__972a0 {
        width: 100%;
        min-width: 0; /* courtesy of @moonself for the fix */
      }

      >.friendsButtonContainer_e6b769,
      >div:nth-of-type(3),
      >.channel__972a0:not(.dm__972a0),
      >.wrapper__553bf {
        margin: 0;
      }

      .channel__972a0:not(.dm__972a0) {
        margin: 0 4px !important;

        >.linkButton__972a0>.link__972a0 {
          padding: 6px;
          justify-content: center;

          >.avatarWithText__972a0 {
            padding: 0;

            >.avatar__20a53 {
              margin: 0;
            }

            >.content__20a53 {
              display: none;
            }
          }

          >.numberBadge__2b1f5 {
            position: absolute;
            left: 17.5px;
            bottom: 0;
            transform: scale(0.7);
          }

          >.premiumBadge__6d7da {
            position: absolute;
            bottom: 0;
            transform: scale(0.7);
            background-color: var(--badge-notification-background);

            >.BadgeClockIcon__6d7da {
              display: none;
            }

            >.eyebrow_cf4812 {
              color: var(--white) !important;
            }
          }

          >.newBadge__4ed1a {
            position: absolute;
            bottom: 0;
            transform: scale(0.7);

            >.eyebrow_cf4812 {
              background-color: var(--badge-notification-background);
              color: var(--white);
            }
          }
        }
      }
    }
  }
}

@container style(--server-tabs:true) {
  .scroller__629e4 {
    padding-right: 0 !important;

    &>.content_d125d2 {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      align-content: flex-start;
      justify-content: space-evenly;

      /* fix spacing when banner is present and boosts bar is not */
      &>div[style="height: 84px;"]:not([class])+div[style="height: 12px;"]:not([class]) {

        &~li:not([class]),
        &~div:not([class]) {
          margin-top: 15px !important;
        }
      }

      /* reduce useless spacing */
      &>div[style="height: 12px;"]:not([class]) {
        height: 0 !important;
        width: 100%;

        /* check if there's only one button when boosts bar is not present */
        &+li:not([class]):has(+.sectionDivider__629e4) {
          width: 100%;
          margin-top: 15px;

          &>.wrapper__2ea32>.basicChannelRowLink__2ea32 {
            padding: 5px 10px;

            &>.content__65844 {
              &>.name__2ea32 {
                display: unset;
              }

              &>.textBadge__2b1f5 {
                position: unset;
                transform: none;
              }
            }
          }
        }
      }

      /* fix top spacing when neither boosts bar nor banner are present */
      &>div[style="height: 0px;"]:not([class])+div[style="height: 12px;"]:not([class]) {

        &~li:not([class]),
        &~div:not([class]) {
          margin-top: 15px !important;
        }
      }

      /* fix top spacing when both boosts bar and banner are present */
      &>div[style="height: 84px;"]:not([class])+div[style="height: 12px;"]+.containerWithMargin__0d0f9 {

        &~li:not([class]),
        &~div:not([class]) {
          margin-top: 15px;
        }
      }

      /* get started bar */
      &>li:not([class]):has(>.progressBarContainer_baf530) {
        width: 100%;

        >.progressBarContainer_baf530 {
          width: 100%;
          margin: 0 5px;
          max-width: calc(240px - 25px);
        }

        >.divider_baf530 {
          width: 100%;
          margin: 15px 15px 3px;
          max-width: calc(240px - 25px);
        }
      }

      /* boosts bar */
      &>.containerWithMargin__0d0f9 {
        margin: 12px 8px 0px;
        width: 100%;

        /* check if there's only one button when boosts bar is present */
        &+li:not([class]):has(+.sectionDivider__629e4) {
          width: 100%;
          margin-top: 15px;

          &>.wrapper__2ea32>.basicChannelRowLink__2ea32 {
            padding: 5px 10px;

            &>.content__65844 {
              &>.name__2ea32 {
                display: unset;
              }

              &>.textBadge__2b1f5 {
                position: unset;
                transform: none;
              }
            }
          }
        }
      }

      &>li:not([class]) {
        width: fit-content;

        &>.wrapper__2ea32 {
          margin: 0 5px;

          &>.unread__2ea32 {
            display: none;
          }

          &>.basicChannelRowLink__2ea32 {
            padding: 5px;

            &>.content__65844 {
              justify-content: center;

              &>.name__2ea32 {
                display: none;
              }

              &>.numberBadge__2ea32 {
                position: absolute;
                left: 17.5px;
                bottom: 0;
                transform: scale(0.7);
                background-color: var(--status-danger);
              }

              &>.textBadge__2b1f5 {
                position: absolute;
                bottom: 0;
                transform: scale(0.7);
              }
            }
          }
        }
      }

      &>div:not([class],
        div:nth-of-type(1),
        div:nth-of-type(2)) {
        width: 40px;

        &>li:not([class])>.wrapper__2ea32 {
          margin: 0 5px;

          &>.basicChannelRowLink__2ea32 {
            padding: 5px;

            &>.content__65844>.name__2ea32 {
              display: none;
            }
          }
        }
      }

      /* divider */
      &>.sectionDivider__629e4 {
        width: 100%;
        margin: 15px 15px 3px;
      }

      /* reduce categories spacing */
      &>.containerDefault__29444 {
        margin: 12px 8px 0;
        padding: 0 10px;

        &>.wrapperCommon__29444 {
          padding: 0;
        }
      }

      /* fix channels */
      &>.containerDefault_c69b6d {
        margin: 0 8px;

        &>.wrapper__2ea32 {
          margin: 0;

          &>.unread__2ea32 {
            left: -8.5px;
          }
        }

        &>div:not([class])>.wrapper__2ea32 {
          margin: 0;

          >.unread__2ea32 {
            left: -7px;
          }
        }
      }

      &>.container__5b40b {
        margin: 0 8px 0 0;
      }

      /* fix categories and channels */
      &>.containerDefault__29444,
      &>.containerDefault_c69b6d,
      &>.container__5b40b {
        width: 100%;
        max-width: calc(240px - 16px);
      }
    }
  }
}

